Learn More Overflow Fixes

--- a/dash-frontend/src/app/learn-more/page.module.css
+++ b/dash-frontend/src/app/learn-more/page.module.css
@@ -64,9 +64,11 @@
 
 .textSide {
     display: flex;
+    height: 87%;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
 }
 
 .welcomeText {
@@ -111,6 +113,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    overflow: scroll;
 }
 
 .whatIsText {
@@ -146,6 +149,7 @@
     background-color: var(--on-background);
     color: var(--background);
     gap: 1rem;
+    overflow: scroll;
 }
 
 .textSideGuide {
@@ -171,6 +175,7 @@
     font-size: 30px;
     font-weight: bold;
     align-self: center;
+    text-align: center;
     text-decoration: underline;
     text-underline-offset: 0.3em;
 }
